--- a/force-app/main/default/classes/HelloWorld.cls
+++ b/force-app/main/default/classes/HelloWorld.cls
@@ -1,5 +1,5 @@
 public class HelloWorld {
     public static void hello() {
-        System.debug('Hello DF18!!');
+        System.debug(' DF18!!');
     }
 }
