--- a/force-app/main/default/classes/registrationFormClass.cls
+++ b/force-app/main/default/classes/registrationFormClass.cls
@@ -1,20 +1,20 @@
 public with sharing class registrationFormClass {
     @AuraEnabled (cacheable=true)
-        public static List<Contact> searchInputContactApexController(String inputedTextForContactSearch){
-            string key = '%' + inputedTextForContactSearch + '%';
+        public static List<Contact> searchInputContactApexController(String contactSought){
+            string key = '%' + contactSought + '%';
                 return [SELECT Id, Name FROM Contact WHERE Name LIKE :key LIMIT 5];
     }
     
 
      @AuraEnabled (cacheable=true)
-        public static List<Contact> getChosenContactApexContoller(String searchKeyForChosenContact){
-            string key = '%' + searchKeyForChosenContact + '%';
+        public static List<Contact> getChosenContactApexContoller(String chosenContact){
+            string key = '%' + chosenContact + '%';
                 return [SELECT Name, (SELECT Name FROM Registration__r) FROM Contact WHERE Name LIKE :key LIMIT 1];
     }
     
      @AuraEnabled (cacheable=true)
-        public static List<Registration__c> handleNickNameInputApexContoller(String nicknameInputGetter){
-            string key = nicknameInputGetter;
+        public static List<Registration__c> handleNickNameInputApexContoller(String nicknameSought){
+            string key = nicknameSought;
                 return [SELECT Id, Name FROM Registration__c WHERE Name =:key];
     }
 }
